--- a/planetas/pubspec.yaml
+++ b/planetas/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   sqflite: ^2.4.1
+  sqflite_common_ffi: ^2.0.0
   path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  
+  integration_test:
+    sdk: flutter
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
